# AttendanceTracker

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  package.json  pnpm-lock.yaml
client/components/: EventCard.tsx
client/context/: AuthContext.tsx
client/hooks/: useAttendees.ts  useAuth.ts  useDebounce.ts  useEvent.ts  useEvents.ts  useProfileData.ts  useQueryParams.ts  useSearchEvents.ts
client/layouts/: LayoutDefault.tsx
client/lib/: constants.ts  utils.ts
client/lib/classes/: ExtendedError.ts
client/pages/: +config.ts
client/pages/event/: +Page.tsx
client/pages/index/: +Page.tsx
client/pages/search/: +Page.tsx
client/pages/signin/: +Page.tsx
client/pages/signup/: +Page.tsx
client/types/: Auth.types.ts  Event.types.ts  index.ts
server/: Dockerfile  README.md  pyproject.toml
server/src/: app.py  database.py
server/src/models/: Attendee.py  Event.py  User.py
server/src/routes/: auth.py  decorators.py  events.py
server/src/utils/: __init__.py
