[project]
name = "server"
version = "0.1.0"
description = ""
authors = [{ name = "Mark Evola", email = "markevola24@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "server", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
