[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Mark Evola <markevola24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
flask-cors = "^6.0.1"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
